<resources>
    <string name="app_name">Music Metrics</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="login_or_signup">Login or Sign up</string>
    <string name="logout">Logout</string>
    <string name="hello">Hello</string>
    <string name="title_activity_nav_bar">NavBar</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_signup_password">Password (8-12 characters)</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_login"><u>Login</u></string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Username should not contain any spaces.</string>
    <string name="invalid_password">Password does not meet the criteria. Please try again.</string>
    <string name="unmatched_passwords">Passwords do not match. Please try again.</string>
    <string name="password_changed">Password changed successfully.</string>
    <string name="password_unchanged">Failed to update password. Please try again.</string>
    <string name="authentication_failed">Authentication failed. Please enter a valid current password.</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_sign_up"><u>Sign up</u></string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="action_login_or_signup">Login or sign up to see your profile.</string>
    <string name="saved">Saved</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="rating_history">Rating History</string>
    <string name="error_occurred">Error occurred.</string>
    <string name="image_to_prompt_user_to_login">Image to prompt user to login</string>
    <string name="recent_searches"><b>Recent Searches</b></string>
    <string name="listen_on_spotify"><u>Listen on Spotify</u></string>
    <string name="clear_search_item">Clear search item</string>
    <string name="clear_all">Clear All</string>
    <string name="login_to_see_recent_searches">Login to see recent searches.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeholder_song_title">{Placeholder: Song Title}</string>
    <string name="placeholder_artist_name">{Placeholder: Artist Name}</string>
    <string name="default_no_rating">No ratings from the community yet.</string>
    <string name="confirm_logout">Are you sure you want to log out?</string>
    <string name="cancel">Cancel</string>
    <string name="prompt_username">Username (no space allowed)</string>
    <string name="placeholder_username">{Placeholder_Username}</string>
    <string name="change_password">Change Password</string>
    <string name="save_changes">Save Changes</string>
    <string name="no_favorites_msg">You don\'t have any saved songs yet.</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="password_instructions">Choose a password that:\n- is 8 to 12 characters in length\n- uses uppercase and lowercase letters\n- uses at least one digit (0-9) and one special character</string>
    <string name="rate_this_song">Rate this song</string>
    <string name="rating_prompt">How do you like the song?\n(1 = lowest and 5 = highest)</string>
    <string name="no_rating_history">You have no rating history.</string>
    <string name="placeholder_album_name">{Placeholder_Album_Name}</string>
    <string name="no_results_found">No results found.</string>
    <string name="no_rating">---</string>
    <string name="confirm_discard_changes">Do you want to discard the unsaved changes?</string>
    <string name="discard">Discard Changes</string>
    <string name="discard_changes">Unsaved Changes</string>
    <string name="image_too_big">Image size should be under 2MB</string>
</resources>