<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.melody_meter_local.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.melody_meter_local.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" >

        <action
            android:id="@+id/action_searchFragment_to_songDetailFragment"
            app:destination="@id/songDetailFragment"
            app:enterAnim="@anim/enter_anim"
            app:exitAnim="@anim/exit_anim"
            app:popEnterAnim="@anim/pop_enter_anim"
            app:popExitAnim="@anim/pop_exit_anim">

            <argument
                android:name="song"
                app:argType="com.example.melody_meter_local.model.Song"
                app:nullable="false" />

        </action>

    </fragment>

    <fragment
        android:id="@+id/songDetailFragment"
        android:name="com.example.melody_meter_local.ui.detail.SongDetailFragment"
        android:label="Song Details">
        <argument
            android:name="song"
            app:argType="com.example.melody_meter_local.model.Song"
            app:nullable="false" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.melody_meter_local.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>