<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/dialog_padding_horizontal"
    android:paddingVertical="@dimen/dialog_padding_vertical"
    android:background="@android:color/transparent"
    tools:context=".ui.LoginDialogFragment">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingBottom="@dimen/spacing_medium_16dp"
        android:orientation="vertical"
        android:background="@color/white">

        <TextView
            style="@style/TextStyle.HyperlinkText.LoginSignupPrompt"
            android:id="@+id/sign_up_prompt"
            android:text="@string/action_sign_up" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/LoginSignupTextInputLayout"
            android:layout_marginTop="@dimen/spacing_large_24dp"
            android:hint="@string/prompt_email" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="clear_text"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/LoginSignupTextInputLayout"
            app:endIconMode="password_toggle"
            android:hint="@string/prompt_password" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small_8dp"
                android:imeActionLabel="@string/action_login"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="@style/PrimaryButton"
            android:id="@+id/btn_login"
            android:layout_marginTop="@dimen/spacing_medium_16dp"
            android:enabled="false"
            android:text="@string/action_login" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>