<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".ui.SongDetailFragment">

    <LinearLayout
        android:id="@+id/image_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_gravity="center_vertical"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/arrow_left"
            app:tint="@color/on_background_60" />

        <ImageView
            android:id="@+id/album_image"
            android:layout_width="350dp"
            android:layout_height="@dimen/height_image_details"
            android:padding="@dimen/spacing_x_medium_20dp"
            android:src="@drawable/default_album_cover"
            app:tint="@color/on_background_60"
            android:scaleType="centerCrop" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/title_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_wrapper"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/track_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/placeholder_song_title"
            android:textSize="@dimen/text_large"/>

        <ImageButton
            android:id="@+id/save_button"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="16dp"
            android:background="@null"
            android:backgroundTint="@color/on_primary"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_save_unpressed"
            app:tint="@color/on_background_60" />

    </LinearLayout>

    <TextView
        android:id="@+id/artist_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_wrapper"
        android:text="@string/placeholder_artist_name"
        android:textSize="@dimen/text_medium"
        android:paddingTop="@dimen/spacing_small_8dp"/>

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artist_name"
        android:text="@string/default_no_rating" />

    <Button
        android:id="@+id/rate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rating"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/spacing_extra_extra_giant_56dp"
        android:text="@string/rate_this_song"
        style="@style/TextStyle.TitleSmall"
        android:textAllCaps="false"
        android:textColor="@color/on_primary"
        android:background="@drawable/button_retry" />

    <TextView
        android:id="@+id/spotify_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listen_on_spotify"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rate_button"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/spacing_large_24dp"
        android:clickable="true"
        android:textColor="@color/hyperlink" />
    
    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/compose_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/spotify_url"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>