<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SearchFragment">

    <!-- Search bar at the top -->
    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_medium_16dp"
        android:hint="Enter song or artist name..."
        android:iconifiedByDefault="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Recent searches section -->
    <androidx.constraintlayout.widget.Group
        android:id="@+id/recent_searches_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="
                    recent_searches_title_wrapper,
                    recent_searches_recycler_view,
                    login_prompt_wrapper
            " />

    <LinearLayout
        android:id="@+id/recent_searches_title_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_view">

        <TextView
            android:id="@+id/title_recent_searches"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/spacing_medium_16dp"
            android:layout_weight="1"
            android:text="@string/recent_searches"
            android:textAllCaps="true"
            android:textSize="@dimen/text_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/clear_all_searches"
            style="@style/TextStyle.BodySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/spacing_medium_16dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/clear_all" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_prompt_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_large_24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recent_searches_title_wrapper">

        <TextView
            android:id="@+id/login_prompt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_x_medium_20dp"
            android:layout_marginTop="@dimen/spacing_small_8dp"
            android:layout_weight="1"
            android:text="@string/login_to_see_recent_searches" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small_8dp"
            android:text="@string/login" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recent_searches_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/spacing_large_24dp"
        android:layout_marginTop="@dimen/spacing_small_8dp"
        android:layout_marginEnd="@dimen/spacing_large_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recent_searches_title_wrapper"
        app:layoutManager="LinearLayoutManager"
        android:scrollbars="vertical" />

    <!-- Search results section -->
    <androidx.constraintlayout.widget.Group
        android:id="@+id/search_results_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="
                    recent_searches_recycler_view
            " />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_results_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/spacing_large_24dp"
        android:layout_marginTop="@dimen/spacing_medium_16dp"
        android:layout_marginEnd="@dimen/spacing_large_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_view"
        app:layoutManager="LinearLayoutManager"
        android:scrollbars="vertical" />

</androidx.constraintlayout.widget.ConstraintLayout>